--- a/intro-html/.md
+++ b/intro-html/.md
@@ -7,3 +7,29 @@ HTML stands for HyperText Markup Language. It’s the standard language used to 
 #### 2. Markup – Uses “tags” to annotate and structure the content.
 
 #### 3.Language – A way to communicate instructions to the web browser.
+
+## Basic Structure of an HTML Page
+
+```bash
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My First Web Page</title>
+  </head>
+  <body>
+    <h1>Hello, World!</h1>
+    <p>This is my first web page.</p>
+    <a href="https://example.com">Visit Example</a>
+  </body>
+</html>
+```
+
+- <html> – The root element of an HTML page.
+- <head> – Contains meta-information like title, CSS links, etc.
+- <title> – The text shown in the browser tab.
+- <body> – The main content visible on the page.
+- <h1> – Heading (largest).
+- <p> – Paragraph.
+- <a> – Hyperlink.
+
+💡 Tip: HTML defines the structure of a webpage
