--- a/html-tags/.md
+++ b/html-tags/.md
@@ -11,3 +11,11 @@ HTML uses tags to define the structure and content of a webpage. Tags are enclos
 - <p> – opening tag
 - </p> – closing tag
 - Content goes between the tags
+- 
+## HTML Tags
+
+<img width="816" height="251" alt="1" src="https://github.com/user-attachments/assets/f797c8f8-52a2-441c-92b4-61f394c6f1ee" />
+<img width="828" height="456" alt="2" src="https://github.com/user-attachments/assets/32d32dd8-e9cc-418f-93d4-8294ca233a25" />
+<img width="771" height="322" alt="3" src="https://github.com/user-attachments/assets/dbddee50-9372-4d95-a336-2ebbdae6cb3a" />
+<img width="826" height="576" alt="4" src="https://github.com/user-attachments/assets/dd05d3df-370a-441a-8beb-7cfa73e3eca5" />
+<img width="842" height="542" alt="5" src="https://github.com/user-attachments/assets/292a5a69-03c4-471f-87d4-8a22f78b0ea1" />
