--- a/html-tags/.md
+++ b/html-tags/.md
@@ -19,3 +19,10 @@ HTML uses tags to define the structure and content of a webpage. Tags are enclos
 <img width="771" height="322" alt="3" src="https://github.com/user-attachments/assets/dbddee50-9372-4d95-a336-2ebbdae6cb3a" />
 <img width="826" height="576" alt="4" src="https://github.com/user-attachments/assets/dd05d3df-370a-441a-8beb-7cfa73e3eca5" />
 <img width="842" height="542" alt="5" src="https://github.com/user-attachments/assets/292a5a69-03c4-471f-87d4-8a22f78b0ea1" />
+
+#### Semantic HTML
+Semantic HTML uses meaningful tags that describe the purpose of the content. It helps:
+
+* Browsers understand your content
+* Search engines index your site better (SEO)
+* Assistive technologies (like screen readers) interpret content
