--- a/table/.md
+++ b/table/.md
@@ -3,10 +3,10 @@
 Tables in HTML are used to display data in rows and columns.
 The main tags are:
 
-- [<table>] Defines the table.
-- [<tr>] Table row.
-- [<th>] Table header cell (bold and centered by default).
-- [<td>] Table data cell (normal cell).
+- table → Defines the table.
+- tr → Table row.
+- th → Table header cell (bold and centered by default).
+- td → Table data cell (normal cell).
 
 #### Example:
 
