--- a/table/.md
+++ b/table/.md
@@ -48,3 +48,5 @@ The main tags are:
 ```
 
 Output Preview
+<img width="766" height="208" alt="Screenshot 2025-09-30 at 10 11 20 PM" src="https://github.com/user-attachments/assets/2b3aa889-21b9-4348-9166-533b6e9df06f" />
+
