--- a/html-tags/.md
+++ b/html-tags/.md
@@ -11,7 +11,8 @@ HTML uses tags to define the structure and content of a webpage. Tags are enclos
 - <p> – opening tag
 - </p> – closing tag
 - Content goes between the tags
-- 
+-
+
 ## HTML Tags
 
 <img width="816" height="251" alt="1" src="https://github.com/user-attachments/assets/f797c8f8-52a2-441c-92b4-61f394c6f1ee" />
@@ -21,8 +22,32 @@ HTML uses tags to define the structure and content of a webpage. Tags are enclos
 <img width="842" height="542" alt="5" src="https://github.com/user-attachments/assets/292a5a69-03c4-471f-87d4-8a22f78b0ea1" />
 
 #### Semantic HTML
+
 Semantic HTML uses meaningful tags that describe the purpose of the content. It helps:
 
-* Browsers understand your content
-* Search engines index your site better (SEO)
-* Assistive technologies (like screen readers) interpret content
+- Browsers understand your content
+- Search engines index your site better (SEO)
+- Assistive technologies (like screen readers) interpret content
+
+## Attribute
+
+HTML attributes provide additional information about the element. An attribute can added only in the opening tag. It will be difficult to list down all HTML attributes but we can list down the most common ones.
+
+- alt - to add information about added image, use with img element.
+- autocompelete - to enable auto complete feature of a form, use with form and input.
+- autofocus - enable auto focus of input fields
+- autoplay - allows playing an audio/video on the page loads
+- charset - enable character encoding of meta tag
+- checked - to make a checkbox checked of an input element
+- class - to give a common identifier for HTML elements
+- cols - to determine the width of a textarea element
+- contenteditable - make any element editable
+- download - allows a link to download a resource(image, pdf, PPT, etc)
+- draggable - to make an element draggable, apply to all elements
+- for - to connect/bound a label element with a specific input field, use with a label tag
+- href - to specify a URL or a path of a resource, use with a link tag
+- id - a unique id for an HTML element, apply to all elements
+- lang - specifies the language of the page
+- type - specifies the type of the element and it uses with only a certain elements
+- src - to specify URL of a media file(img, audio, video, source, embed, script)
+- style - to add an inline CSS style to an element
