--- a/intro-css/.md
+++ b/intro-css/.md
@@ -39,3 +39,31 @@ CSS stands for Cascading Style Sheets. It’s the language used to style and lay
 </body>
 </html>
 ```
+
+### Inline Style
+
+We can apply CSS to an HTML element using inline styling.We use the style attribute to apply CSS to an HTML element. For instance, let us apply style to h1.
+
+```bash
+<h1 id="first-title" style="color:green">The Building Blocks of the web</h1>
+```
+
+### Internal CSS
+
+Written inside a style tag in the head section of the HTML file.
+
+```bash
+<html>
+  <head>
+    <style>
+       p {
+         color: green;
+         font-size: 18px;
+         }
+    </style>
+  </head>
+  <body>
+    <p>This is Internal CSS</p>
+  </body>
+</html>
+```
